resources/assets/css/map.css
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

html, body, #map, #app, .wrapper {
    height: 100%;
    width: 100%;
}

/* css to customize Leaflet default styles  */
.popupCustom .leaflet-popup-tip,
.popupCustom .leaflet-popup-content-wrapper {
    background: #e0e0e0;
    color: #234c5e;
}

.popup_select {
    width: 300px;
}

#map_controls .map_controls_custom,
#map_faction_display_controls .map_controls_custom {
    width: 50px;
    background-image: none;
}

.map_enemy_tooltip {
    width: 240px;
    white-space: normal;
}

.leaflet-container {
    background-color: #2B3E50;
}

.modal-lg {
    max-width: 80%;
}

#sidebar {
    width: 300px;
    position: fixed;
    top: 0;
    left: -300px;
    height: 100vh;
    z-index: 1030;
    transition: all 0.2s;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
    background-color: #4E5D6C;
    border-right: #2B3E50 solid 1px;
}

#sidebar.active {
    left: 0;
}

#sidebarToggle {
    width: 35px;
    height: 35px;
    line-height: 35px;
    text-align: center;

    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;

    position: fixed;
    top: 106px;
    left: 0;
    cursor: pointer;
    z-index: 1050;

    background: #4E5D6C;
    color: #DF691A;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#sidebarToggle.active {
    left: 300px;
}

#sidebarToggle:hover {
    background: #DF691A;
    color: #FFF;
}

#sidebar .sidebar-header {
    padding: 10px 20px;
    background: #2B3E50;
}

/* Force reserve height */
#sidebar .sidebar-header h4 {
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap
}

#sidebar .sidebar-header-subtitle {
    padding-left: 10px;
    min-height: 25px;
    color: #C1C1C1;
}

#sidebar .sidebar-content .container {
    padding: 0 15px;
}

#sidebar .sidebar-content {
    padding-top: 10px;
}

#sidebar .sidebar-content .card-body {
    padding: 0.75rem 1.25rem;
}

#sidebar .sidebar-panel {
    /*padding: 10px;*/
    /*border: #2B3E50 solid 1px;*/
    margin: 4px;
}


.route_manipulation_tools {
    background-color: rgba(78, 93, 108, 0.75);
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
    border-left: #2B3E50 solid 1px;
    border-top: #2B3E50 solid 1px;
    border-right: #2B3E50 solid 1px;

    margin: auto;
    padding-bottom: 10px;
}

@media screen and (min-width: 1100px) {
    .route_manipulation_tools {
        width: 1100px;
    }
}

.route_manipulation_tools .draw_icon {
    text-align: center;
    background: #5bc0de;
    cursor: pointer;
    margin: 0 10px;
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;
}

.route_manipulation_tools .draw_element {
    text-align: center;
    margin: 0 10px;
    margin-top: 8px;
}

.route_manipulation_tools .draw_element .bootstrap-select,
.route_manipulation_tools .draw_element button,
.route_manipulation_tools .draw_element input {
    height: 100%;
}

.route_manipulation_tools .draw_icon.leaflet-disabled,
.route_manipulation_tools .draw_icon.leaflet-disabled:hover {
    background: gray;
    color: inherit;
    text-decoration: unset;
    cursor: default;
}

.route_manipulation_tools .draw_icon.leaflet-draw-toolbar-button-enabled,
.route_manipulation_tools .draw_icon:hover {
    background: #DF691A;
    color: rgb(235, 235, 235) !important;
}

.floating_panel,
#sidebar .card {
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

#sidebar .dropdown.bootstrap-select {
    background-color: #4E5D6C;
}

#edit_route_freedraw_options_color,
#sidebar .dropdown.bootstrap-select .btn,
.route_manipulation_tools .dropdown.bootstrap-select,
.route_manipulation_tools .dropdown.bootstrap-select .btn {
    background-color: #4E5D6C;
    color: #FFF;
    border: 1px solid #2B3E5066;
}

#edit_route_draw_container a {
    color: #FFF;
}

#edit_route_draw_actions_container .leaflet-draw-actions {
    background-color: rgb(78, 93, 108);
    box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2);
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;

    top: unset !important;
    position: unset !important;
    left: unset !important;
    /*position: fixed;*/
    /*left: 50%;*/
    /*transform: translateX(-50%);*/
    /*bottom: 94px;*/
    /*top: unset !important;*/
}

#edit_route_draw_actions_container .leaflet-draw-actions li {
    line-height: 35px;
}

#edit_route_draw_actions_container .leaflet-draw-actions a {
    background: inherit;
    color: #DF691A;
    font-size: 14px;
}

#map-controls {
    height: 700px;
}

.map-scroll:before {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    content: '';
    background: #00000061;
    z-index: 999;
}

.map-scroll:after {
    content: 'Use ctrl + scroll to zoom the map';
    position: absolute;
    top: 50%;
    width: 100%;
    z-index: 999;
    font-size: 34px;
    color: #eaeaea;
    text-align: center;
}

/* Remove square background and border around enemies, but leave editing drag squares alone */
.leaflet-marker-icon.leaflet-div-icon:not(.leaflet-editing-icon):not(.leaflet-edit-marker-selected) {
    border: none;
    background-color: unset;
}

.leaflet-verticalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    top: 50%; /* possible because the placeholder's parent is the map */
    transform: translateY(-50%); /* using the CSS3 Transform technique */
}

.leaflet-verticalcenter .leaflet-control {
    margin-bottom: 10px;
}

.leaflet-horizontalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    left: 50%; /* possible because the placeholder's parent is the map */
    transform: translateX(-50%); /* using the CSS3 Transform technique */
}

.leaflet-horizontalcenter .leaflet-control {
    margin-right: 10px;
}

/** leaflet-marker-icon leaflet-div-icon leaflet-zoom-animated leaflet-interactive */
/** leaflet-marker-icon leaflet-div-icon leaflet-editing-icon leaflet-touch-icon leaflet-zoom-animated leaflet-interactive leaflet-marker-draggable */

.circleMenu-closed {
    opacity: 0;
}

.circleMenu-open {
    opacity: 1;
}

.selected_enemy_icon,
.enemy_icon {
    width: 11px;
    height: 11px;
}

.mdt_enemy_icon.leaflet-edit-marker-selected {
    border-color: yellow !important;
    margin-top: -9px !important;
    margin-left: -9px !important;
    border-radius: 4px !important; /* Fixes weird border */
}

.boss_enemy_icon {
    width: 32px;
    height: 32px;
}

.enemy_aggressiveness_correction {
    margin-top: -6px;
}

.modifier {
    position: absolute;
    width: 16px;
    height: 16px;
}

.modifier_0 {
    top: -19px;
    left: -20px;
    /* background-color: red; */
}

.modifier_1 {
    top: -22px;
    left: -3px;
    /* background-color: green; */
}

.modifier_2 {
    top: -19px;
    left: 14px;
    /* background-color: blue; */
}

.modifier_0_boss {
    left: -9px;
}

.modifier_1_boss {
    left: 8px;
}

.modifier_2_boss {
    left: 25px;
}

.badge_enemy_forces {
    font-size: 100%;
    margin-left: -4px;
    background-color: #00f8;
}

.col-3-5 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 29.1%;
    flex: 0 0 29.1%;
    max-width: 29.1%;
}

.enemy_icon {
    background-image: url("/images/mapicon/unset.png") !important; /* no-repeat center !important; */
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 6px;
    background-blend-mode: hard-light;
}

.teeming {
    border: 1px solid red;
}

.aggressive_enemy_icon {
    background-color: #dc3c3c !important;
}

.neutral_enemy_icon {
    background-color: #cccc2d !important;
}

.unfriendly_enemy_icon {
    background-color: #ff9900 !important;
}

.friendly_enemy_icon {
    background-color: #15c415 !important;
}

.boss_enemy_icon {
    background: url("/images/mapicon/boss.png") no-repeat center !important;
}

.unset_enemy_icon {

}

.flagged_enemy_icon {
    background-color: #cccc2d !important;
}

.mdt_enemy_icon {
    background-color: #4444ff !important;
}

.mdt_mismatched_enemy_icon {
    background-color: #ff9900 !important;
}

.mdt_ok_enemy_icon {
    background-color: #15c415 !important;
}

.door_icon {
    background: url("/images/mapicon/door.png") no-repeat center !important;
}

.killzone_icon_big {
    margin-left: -19px !important;
    margin-top: -19px !important;
    border-color: yellow !important;
}

.selected_enemy_icon_small {
    margin-top: -4px !important;
    margin-left: -4px !important;
}

.selected_enemy_icon_medium {
    margin-top: -4px !important;
    margin-left: -4px !important;
}

.selected_enemy_icon_big {
    margin-top: -4px !important;
    margin-left: -4px !important;
    width: 32px !important;
    height: 32px !important;
}

#map_enemy_forces h5 {
    margin-bottom: 0;
}

/* When in the sidebar, spread it out fully */
#sidebar #map_enemy_visuals {
    width: 100%;
}

#map_enemy_visuals {
    width: 200px;
}

.map_enemy_forces_too_little_warning,
.map_enemy_forces_too_much_warning {
    color: #f0ad4e;
}

.map_enemy_forces_ok {
    color: #5cb85c;
}

.map_polyline_edit_popup_class_color {
    height: 32px;
    margin: 2px 10px;
    border-radius: 3px;
    cursor: pointer;
}

/* Class that's used for displaying custom markers with a font-awesome icon instead of the default marker */
.marker_div_icon {
    width: 30px;
    height: 30px;
    text-shadow: 2px 2px #1A1A1A;
}

.marker_div_icon_font_awesome {
    text-align: center; /* Horizontally center the text (icon) */
    line-height: 25px; /* Vertically center the text (icon) */
}

.marker_div_icon_dungeon_start_marker {
    color: #48a648;
}

.marker_div_icon_dungeon_floor_switch_marker {
    color: lightblue;
}

.marker_div_icon_killzone {
    color: #d12600;
    font-size: 30px;
}

.marker_div_icon_mapcomment {
    font-size: 16px;
}

.marker_div_icon_circle_border {
    border: 3px solid;
    border-radius: 15px;
}

.map_map_comment_tooltip {
    width: 240px;
    white-space: normal;
}

#map_ad_horizontal,
#map_ad_vertical {
    position: fixed;
    bottom: 0;
    z-index: 1020;
    margin-bottom: 16px;
}

#map_ad_horizontal {
    width: 100vw;
}

#map_ad_vertical {
    right: 0;
}


#map.mode-create {
    cursor: crosshair;
}

#map div.elbow {
    transition: background-color .25s;
    border: 2px solid white;
    outline: none;
    box-shadow: 0 0 3px rgba(0, 0, 0, .1);
    border-radius: 50%;
    pointer-events: none;
    background-color: #555;
}

#map.mode-edit div.elbow {
    cursor: move;
    pointer-events: all;
    background-color: orangered;
}

#map.mode-delete:not(.mode-append) path {
    cursor: not-allowed;
}

#map svg {
    position: absolute;
    z-index: 1001;
}

.flash {
    animation-name: flash-animation;
    animation-duration: 0.75s;
}

@keyframes flash-animation {
    from {
        color: #9DFF56;
    }
    to {
        color: inherit;
    }
}

